# agentspaces

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install.sh
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  crash_safety_bug.yml  docs_fix.yml  feature_request.md  integration_request.yml  performance_report.yml
.github/workflows/: ci.yml  dependency-audit.yml  release.yml
crates/asp/: Cargo.toml  README.md
crates/asp-core/: Cargo.toml  README.md
crates/asp-core/examples/: walk_bench.rs
crates/asp-core/src/: blobs.rs  config.rs  error.rs  file_state.rs  fork.rs  gitx.rs  journal.rs  lib.rs  policy.rs  store.rs  sync.rs  workspace.rs
crates/asp-core/tests/: engine.rs  properties.proptest-regressions  properties.rs  sync_emulators.rs
crates/asp/src/: bench.rs  hooks.rs  lib.rs  main.rs  mcp.rs  race.rs  ui.rs
crates/asp/tests/: cli.rs  fuzz_harnesses.rs  hooks.rs  install_script.rs  json_snapshots.rs  mcp.rs  package_metadata.rs  torture.rs
crates/asp/tests/snapshots/: cli_audit.json  cli_bench_self.json  cli_checkpoint.json  cli_completions.json  cli_config_diff.json  cli_config_validate.json  cli_diff_html.json  cli_diff_patch.json  cli_diff_stat.json  cli_doctor_runbook.json  cli_drill_fork.json  cli_drill_recovery.json  cli_error.json  cli_evidence_collect.json  cli_evidence_manifest.json  cli_evidence_output.json  cli_evidence_timeline.json  cli_evidence_timeline_output.json  cli_evidence_verify.json  cli_init.json  cli_init_print_template.json  cli_log.json  cli_manpage.json  cli_policy_explain.json  cli_policy_validate.json  cli_preflight.json  cli_quickstart.json  cli_race.json  cli_retention_plan.json  cli_review.json  cli_schema.json  cli_setup_codex.json  cli_setup_opencode.json  cli_stats.json  cli_status.json  cli_sync_fetch.json  cli_sync_push.json  cli_sync_status.json  mcp_error.json  mcp_initialize.json  (+3 more)
docs/: FAQ.md  agent-infra-research-archil-mesa-code.md  agent-preflight.md  architecture.md  audit.md  backup-recovery.md  cheatsheet.md  ci.md  claims.md  codex.md  config-review.md  config-templates.md  config.md  control-plane-constraints.md  dependency-governance.md  development.md  diagnostics.md  doctor-runbook.md  drills.md  enterprise-support-boundaries.md  evaluation.md  evidence.md  filesystems.md  fleet-rollout.md  fuzzing.md  homebrew.md  ignore-config-secrets.md  launch-checklist.md  local-engine-governance.md  local-first-team-workflows.md  manpage.md  mcp-clients.md  mcp-error-codes.md  monorepo-tuning.md  npm-wrapper.md  open-core-boundary.md  opencode.md  package-publishing.md  playbooks.md  policy-packs.md  (+24 more)
docs/assets/: demo.tape
docs/benchmarks/: BENCHMARKS.md  spike-results.md
docs/design/: format.md  lens-analysis.json  review-findings-v0.1.json  sync-protocol.md  v1-brief.md  windows-block-clone-spike.md  windows-support-plan.md
npm/asp/: README.md  package.json
npm/asp/lib/: install.js
npm/asp/test/: install.test.js
packaging/homebrew/Formula/: asp.rb
schemas/: asp-result.schema.json  cli-json-envelope.schema.json  mcp-tool-result.schema.json
scripts/: make-demo.sh  sync-emulators.sh
scripts/bench/: run.py
scripts/spike/: bench_fork.py  bench_shadow_git.py  gen_tree.py
