[workspace]
resolver = "2"
members = ["crates/asp-core", "crates/asp"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArnavBorkar/agentspaces"
authors = ["Arnav Borkar"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
fs2 = "0.4"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
blake3 = "1"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
libc = "0.2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
