[package]
name = "asp-core"
description = "Engine for agentspaces: durable, branchable agent workspaces over real directories"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage = "https://github.com/ArnavBorkar/agentspaces"
documentation = "https://docs.rs/asp-core"
categories = ["development-tools", "filesystem"]
keywords = ["agents", "workspace", "checkpoint", "git", "storage"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
crc32fast.workspace = true
fs2.workspace = true
toml.workspace = true
uuid.workspace = true
blake3.workspace = true
walkdir.workspace = true
libc.workspace = true
time.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true
