[package]
name = "asp"
description = "agentspaces: instant, disposable, fully-reviewable forks of your real working directory for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "asp"
path = "src/main.rs"

[dependencies]
asp-core = { path = "../asp-core", version = "0.1.1" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive", "wrap_help"] }
libc.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
