[package]
name = "asp"
description = "agentspaces: instant, disposable, fully-reviewable forks of your real working directory for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
homepage = "https://github.com/ArnavBorkar/agentspaces"
documentation = "https://docs.rs/asp"
categories = ["command-line-utilities", "development-tools"]
keywords = ["agents", "workspace", "checkpoint", "git", "mcp"]

[[bin]]
name = "asp"
path = "src/main.rs"

[dependencies]
asp-core = { path = "../asp-core", version = "0.1.1" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
libc.workspace = true
quick-xml = "0.38"
time.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
